--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^1.0.0-beta.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
