--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@trpc/react": "^9.25.3",
         "@trpc/server": "^9.25.3",
         "dayjs": "^1.11.3",
+        "moment": "^2.29.4",
         "next": "12.2.0",
         "next-auth": "^4.9.0",
         "react": "18.2.0",
