--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "zod": "^3.17.3"
     },
     "devDependencies": {
-        "@iconify-icon/react": "^1.0.0-beta.2",
+        "@iconify-icon/react": "^1.0.0",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
