--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@trpc/server": "^9.25.3",
         "dayjs": "^1.11.3",
         "moment": "^2.29.4",
-        "next": "12.2.0",
+        "next": "^12.3.0",
         "next-auth": "^4.9.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
