--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@iconify/react": "^4.0.0",
+        "@types/next": "^9.0.0",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
