--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,15 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
-        "noUncheckedIndexedAccess": true
+        "noUncheckedIndexedAccess": true,
+        "paths": {
+            "@/features/*": ["./src/features/*"],
+            "@/utils/*": ["./src/utils/*"],
+            "@/components/*": ["./src/components/*"],
+            "@/hooks": ["./src/hooks/"],
+            "@/server/*": ["./src/server/*"],
+        }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules", ".next"]
+    "exclude": ["node_modules", ".next"],
 }
